# k8s-pilot

./: .gitignore  Dockerfile  README.md  k8s_pilot.py  main.py  pyproject.toml  smithery.yaml
core/: config.py  context.py  kubeconfig.py  permissions.py
models/: context.py  types.py
resources/: contexts.py
server/: server.py
tools/: cluster.py  configmap.py  daemonset.py  deployment.py  ingress.py  namespace.py  node.py  pod.py  pv.py  pvc.py  replicaset.py  role.py  secret.py  service.py  serviceaccount.py  statefulset.py
